--- a/main.tex
+++ b/main.tex
@@ -191,7 +191,7 @@
 \begin{appendices}
 
 \chapter{Modbus funktiokoodit}
-\label{ch:liite}
+\label{app:modbus_funktio_koodit}
 \input{./tex/modbus_funktio_koodit.tex}
 
 \end{appendices}
