--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -178,3 +178,67 @@ title={Regularien Vergabe SG-Ready V 2.0},
 url={https://www.waermepumpe.de/sg-ready/},
 type = {Standard}
 }
+
+@misc{pakonen,
+author = {Mäkinen, Antti and Pakonen, Pertti},
+organization = {TTY},
+title = {Sähköverkon häiriöt ja sähkön laatu -- opintomoniste},
+}
+
+@misc{SVTSaLaTuo,
+organization = {Tilastokeskus},
+title = {Suomen virallinen tilasto (SVT): Sähkön ja lämmön tuotanto},
+issn = {1798-5072},
+year = {2018},
+url = {http://www.stat.fi/til/salatuo/2018/salatuo_2018_2019-11-01_tie_001_fi.html},
+urldate = {2020-08-19}
+}
+
+@misc{SVTehk,
+organization = {Tilastokeskus},
+title = {Suomen virallinen tilasto (SVT): Energian hankinta ja kulutus, Liitekuvio 22. Sähkön kulutus sektoreittain 2018},
+issn = {1799-795X},
+year = {2018},
+url = {http://www.stat.fi/til/ehk/2018/04/ehk_2018_04_2019-03-28_kuv_022_fi.html},
+urldate = {2020-08-19}
+}
+
+@misc{energiateollisuus,
+organization = {Energiateollisuus ry},
+title = {Sähköntuotanto},
+url = {https://energia.fi/energiasta/energiantuotanto/sahkontuotanto},
+urldate = {2020-08-19}
+}
+
+@misc{fingrid,
+organization = {Fingrid},
+title = {Kantaverkkoyhtiö Fingridin verkkosivut},
+url = {https://www.fingrid.fi/}
+}
+
+@misc{sulpu,
+organization = {Suomen lämpöpumppuyhdistys},
+title = {Suomen lämpöpumpputilastot},
+url = {https://www.sulpu.fi/tilastot},
+urldate = {2020-08-19}
+}-
+
+@article{sello,
+  title    = {Kauppakeskus Sello tähtää reservimarkkinoille},
+  journal  = {Fingrid Oyj:n lehti},
+  year     = {2018},
+  number   = {2},
+  issn     = {1455-7517},
+}
+
+@book{dictOfEnergy,
+title = {Dictionary of energy},
+abstract = {An essential reference companion for anyone with an interest in energy, including scientists, consultants, journalists, economists, educators, students and policy-makers.},
+address = {Oxford, United Kingdom},
+booktitle = {Dictionary of energy},
+edition = {Second edition.},
+isbn = {1-78539-112-7},
+keywords = {Power resources},
+language = {eng},
+publisher = {Elsevier Science & Technology},
+}
