--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -8,7 +8,7 @@
 	author={Weidong Xiao},
 	year={2017},
 	title={Photovoltaic power system : modelling, design and control},
-	publisher={John Wiley & Sons},
+	publisher={John Wiley \& Sons},
 	address={Hoboken, NJ},
 	note={Includes bibliographical references and index; ID: alma9910678587405973},
 	isbn={1-119-28032-X}
@@ -37,7 +37,7 @@
   author = {Joshi, Puneet and Arora, Sudha},
   copyright = {2016 Elsevier Ltd},
   issn = {1364-0321},
-  journal = {Renewable & sustainable energy reviews},
+  journal = {Renewable \& sustainable energy reviews},
   keywords = {Performance comparison ; Renewable energy and DC-DC converter ; Maximum power point tracking ; Photovoltaic system ; Electrical engineering ; Analysis ; Power electronics ; Alternative energy sources ; Electric current converters},
   language = {eng},
   pages = {1154-1177},
@@ -94,7 +94,7 @@
   author = {Tuballa, Maria Lorena and Abundo, Michael Lochinvar},
   copyright = {2016 Elsevier Ltd},
   issn = {1364-0321},
-  journal = {Renewable & sustainable energy reviews},
+  journal = {Renewable \& sustainable energy reviews},
   keywords = {Intelligent grid ; Electricity grids ; Power systems ; Smart Grid technologies ; Smart Grid ; Energy policy ; Global temperature changes ; Green technology ; Electric power systems},
   language = {eng},
   pages = {710-725},
