--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -33,11 +33,6 @@
   description={Recommended standard}
 }
 
-\newglossaryentry{RTU}{
-  name={RTU},
-  description={Remote Terminal Unit}
-}
-
 \newglossaryentry{PDU}{
   name={PDU},
   description={protocol data unit}
@@ -61,4 +56,14 @@
 \newglossaryentry{RTU}{
   name={RTU},
   description={remote terminal unit}
+}
+
+\newglossaryentry{CHP}{
+  name={CHP},
+  description={compined heat and power -- yhteistuotantovoimalaitos}
+}
+
+\newglossaryentry{V2G}{
+  name={V2G},
+  description={vehicle-to-grid}
 }
