--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -34,4 +34,4 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
   \section{Aggregaattori}
 
-    Vanhastaan sähkömarkkoinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä/toimittaa markkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla. Avoimia kysymyksiä: Kuka omistaa energian? Ḿikä laki tämän mahdollistaa ja milloin? Voiko myös verkonhaltija toimia aggregaattorina?
+    Vanhastaan sähkömarkkoinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimja, jonka tehtävänä on myydä/toimittaa markkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla. Avoimia kysymyksiä: Kuka omistaa energian? Mikä laki tämän mahdollistaa ja milloin? Voiko myös verkonhaltija toimia aggregaattorina?
