--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -1,11 +1,9 @@
-Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja ohjaukseen on ollut pitkään olemassa erilaisia ratkaisuja. \marginpar{Selvitä historiaa.} Suurempia hyötyjä saadaan kuitenkin useiden useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta.
+Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta. Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia.
 
 
 \section{Etämonitorointi ja -ohjaus}
 
-  Ilmeisin tapa hyödyntää lämpöpumppujen kommunikointirajapintoja on etämonitorointi ja -ohjaus.
-
-  Etämonitoroinnilla tarkoitetaan lämpöpumpun toiminnan seuraamista etänä. Seurattavia asioita voivat olla esimerkiksi:
+  Ilmeisin tapa hyödyntää lämpöpumppujen kommunikointirajapintoja on etämonitorointi ja -hallinta. Etämonitoroinnilla tarkoitetaan lämpöpumpun toiminnan seuraamista etänä. Seurattavia asioita voivat olla esimerkiksi:
   \begin{itemize}
     \item järjestelmässä kiertävien aineiden ja mahdollisten varaajien lämpötilat,
     \item kompressorin tai sähkövastuksen käyttö,
@@ -14,41 +12,39 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
   \end{itemize} \parencite{Latomaki}
   Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myöskin virhetilanteissa pystytään reagoimaan nopeammin.
 
-  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etäohjauksesta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etäohjauksesta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etäohjauksella voidaan saavuttaa energian säästöä eri tavoilla. Etäohjaus mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan etäohjauksella nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Etäohjaussovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista käyttöliittymistä käyttäjän omalle laitteelle.
+  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
-  kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat \marginpar{etsi joku} tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. \marginpar{taloautomaatiokappale} Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta.
+  kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
-  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, \marginpar{tarkennusta} tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
+  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
 
   Yksittäisen lämpöpunpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäissen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
 
 \section{kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Myös valmistavan suurteollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvsti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja CHP-voimaloita tietyn suunnitelman mukaan. Niin kutsutut pohjavoimalaitokset, kuten esimerkiksi ydinvoialaitoset ja osa lauhdevoimaloista \marginpar{tarkasta tää}, taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta \marginpar{tarkka lukema ois kiva}. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti nimellistehollaan. Pohjavoimalaitoksille tyypillistä on polttoaineen halpa hinta, ja täten kohtuullisen pienet muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen\parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan.\parencite{energiateollisuus} Niin kutsutut pohjavoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja CHP-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta.\parencite{SVTSaLaTuo} Pohjavoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti nimellistehollaan, sillä polttoainekustannuksia ei ole.
 
-  Vaikka lauhdevoimalaitoksia käytetään säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa tehonsäätöä ei saada suoritettua tarpeeksi nopeasti niin, että se olisi energiataloudellista\footnote{etsippä lähe ja minuuttimäärät ja selvitä käytetäänkö tähän tarkoitukseen}. Suomessa sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla, sillä vesimvoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärejestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden geeraattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa lähes reaaliajassa. Kantaverkkoyhtiö Fingrid myöskin edellyttää voimalaitoksilta taajuusohjattua häiriöreserviä,\marginpar{Ihan tosi? onko oikea termi} joka on kyettävä ottamaan käyttöön, mikäli sähköverkon taajuus eroaa \SI{0.5}{\hertz} tai enemmän nimellistaajuudesta \SI{50}{\hertz}.
+  Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat niin pitkiä, että sekuntitasolla tapahtuva tuotannon lisäys ei onnistu.\parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla\parencite{energiateollisuus}, sillä vesimvoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärejestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden geeraattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa lähes reaaliajassa. Kantaverkkoyhtiö Fingrid myöskin edellyttää voimalaitoksilta taajuusohjattua häiriöreserviä, joka on kyettävä ottamaan käyttöön, mikäli sähköverkon taajuus eroaa \SI{0.5}{\hertz} tai enemmän nimellistaajuudesta \SI{50}{\hertz} \parencite{VJV2018}.
 
-  Uusiutuvien energialähteden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava vaihtelevien energialähteiden käyttö luo entisestään tarvetta säätövoimalle. Säätövoima on kuitenkin huomattavasti kalliimpaa, eikä säätövoimaksi hyvin soveltuvaa vesivoimaa ole tarjolla määrättömästi. Myöskään sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin.  Sähkön tuotanto on muuttumassa vähemmän joustavaksi. \marginpar{Huippu teho voiman ongelmat}
+  Uusiutuvien energialähteden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava vaihtelevien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin pohjavoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiki maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
 
-  YKsi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia engelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa. Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
+  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia engelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
 
-  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua. Mikäli lämöpumpun keskimääräiseksi sähkötehoksi käytön aikana arvioidaan esimerkiksi \SI{1}{\kilo\watt}, tulee niiden yhteistehoksi \SI{1}{\giga\watt}. Tämä vastaa noin yhtä neljästoista koko Suomen sähkökulutuksesta kovimman sähkönkulutuksen aikaan. \marginpar{tarkkuutta tähän} Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
+  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa\parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua\parencite{sulpu}. Mikäli lämöpumpun keskimääräiseksi sähkötehoksi käytön aikana arvioidaan esimerkiksi \SI{1}{\kilo\watt}, tulee niiden yhteistehoksi \SI{1}{\giga\watt}. Tämä vastaa noin yhtä neljästoista koko Suomen sähkökulutuksesta kovimman sähkönkulutuksen aikaan. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
 
 \subsection{Virtuaalivoimalat}
 
-  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu yhdestä suuresta tai useammasta pienestä kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan.
+  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan. Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.\parencite{fingrid}
 
-  Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.
+  Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksköistä, ei fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä\parencite{VJV2018}.
 
-  Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Myöskin verkkoonliittymisvaatimukset ovat erilaiset. \marginpar{millä lailla? vai onko?}
+  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa\parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutään \gls{V2G}-tekniikasta\parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta\parencite{dictOfEnergy}. Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on siis nimenomaan kulutusjouston myyminen, ei niinkään energian.
 
-  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutään V2G-tekniikasta. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta. Virtuaalivoimalalle ominaista on siis nimenomaan kulutusjouston myyminen, ei niinkään enrgian.
-
-  Energiaa saadaan varastoitua myös lämmitysjärjestelmiin. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.\marginpar{tarkasta}
+  Energiaa saadaan varastoitua lämmitysjärjestelmiin. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.
 
 \subsection{huipputehon rajoittaminen}
 
-  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen kuormitettavuus eli sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat siis kuormitettuina huomattavasti mitoitustaan pienemmällä kuormalla.
+  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen kuormitettavuus eli sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat siis kuormitettuina huomattavasti mitoitustaan pienemmällä kuormalla.\marginpar{sähköverkot-kirja lähteeksi}
 
   Rajoittamalla johdolla syötetyn alueen huipputehoja, saatetaan välttää uusien yhteyksien rakentaminen. Siirtojohdolla tapahtuvat jännitehäviöt ovat myös suurimmillaan suurimman tehonkulutuksen aikana, joten rajoittamalla huipputehoja, pystytään alentamaan johdolla tapahtuvia häviöitä.
 
@@ -56,14 +52,14 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
 
   Lämpöpumppupoolin ohjuksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
 
-  Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päälläolo ei ole välttämätöntä lyhyllä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saateetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
+  Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päälläolo ei ole välttämätöntä lyhyillä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saateetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
 
 \section{Mahdolliset haittavaikutukset}
 
-  Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädää huomioimatta. Osa haittavaikutuksista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
+  Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädä aluksi huomioimatta. Osa haittavaikutuksista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
 
-  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingosa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja,  tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytämmössä kenen tahansa käytettävissä. Mikäli laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä urkkia tietoja, joiden päätytminen ulkopuolisten korviin ei ole hyvä juttu. Mahdollisia urkittavia asioita voi olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen.
+  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingosa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja,  tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä. Mikäli laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä urkkia tietoja, joiden päätytminen ulkopuolisten korviin ei ole hyvä juttu. Mahdollisia urkittavia asioita voi olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen.
 
-  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Mikäli kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin, esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa. Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtäaikaa voidaa laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, eli tuottamaan lisää niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
+  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Mikäli kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa. Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtäaikaa voidaa laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, eli tuottamaan lisää niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
 
-  Ihmisen turvalisuuden tunnetta lisää, kun hänellä on tunne siitä, että asioita voi kontrolloida itse. Kun Lämpöpumpun ohjausta halutaa siirtää älykkäässä sähköverkossa kolmansille osapuolille kuten agregaattoreille, tämä turvallisuuden tunne saattaa horjua.
+  Ihmisen turvalisuuden tunnetta lisää, kun hänellä on tunne siitä, että asioita voi kontrolloida itse. Kun Lämpöpumpun ohjausta halutaan siirtää älykkäässä sähköverkossa kolmansille osapuolille kuten agregaattoreille, tämä turvallisuuden tunne saattaa horjua.
